# resume_generator

./: .coderabbit.yaml  .dockerignore  .gitignore  CODE_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  DJANGO_INTEGRATION_REPORT.md  Dockerfile  FINAL_SUMMARY.md  FUNCTIONAL_REFACTOR_REPORT.md  FUNCTIONAL_REFACTOR_SUMMARY.md  HEROKU_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  Makefile  PLACEHOLDER_DATA_ISSUES.md  Procfile  README.md  SYSTEMATIC_REVIEW_ISSUES.md  USER_AUTHENTICATION_SYSTEM_SUMMARY.md  WEBSITE_CONTENT_REVISION.md  color_scheme_generator.py  color_scheme_generator_tool.py  comprehensive_master_achievements.json  content_manager.py  data_loader.py  data_validator.py  db.sqlite3  deploy_heroku.py  docker-compose.yml  fix_demographic_achievement.py  functional_example.py  generate_all_resumes.py  generate_complete_readme.py  generate_human_resumes 2.py  generate_human_resumes.py  generate_improved_readme.py  heroku_env_vars.txt  install.bat  install.sh  (+24 more)
color_schemes/: brand_data_professional.json  brand_gis_expert.json  cartographic_professional.json  corporate_blue.json  default_professional.json  modern_clean.json  modern_tech.json  satellite_imagery.json  terrain_mapping.json  topographic_classic.json
docs/: COMPLETE_DOCUMENTATION_SUMMARY.md  README.md  admin-guide.md  api-documentation.md  architecture.md  color-scheme-themes.md  color-schemes-guide.md  data-model.md  deployment.md  developer-guide.md  development.md  email-setup.md  examples.md  faq.md  font-theme-analysis.md  getting-started.md  pdf-engine.md  (+7 more)
(+1312 files in other folders)
