[project]
name = "resume-generator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=23.0.0",
    "colorthief>=0.2.1",
    "dj-database-url>=2.0.0",
    "django>=4.2.0",
    "django-cors-headers>=4.0.0",
    "django-grappelli>=4.0.2",
    "djangorestframework>=3.14.0",
    "gunicorn>=20.1.0",
    "mypy>=1.0.0",
    "pillow>=9.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-docx>=0.8.11",
    "reportlab>=3.6.0",
    "whitenoise>=6.0.0",
]
